--- a/CourseTasks/Matrixes/Matrixes.csproj
+++ b/CourseTasks/Matrixes/Matrixes.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E3A86A7-234D-49D1-A566-60464BCE2318}</ProjectGuid>
+    <ProjectGuid>{3A6B21A2-784F-448C-B9A0-58CBE515C66E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Shapes</RootNamespace>
-    <AssemblyName>Shapes</AssemblyName>
+    <RootNamespace>Matrixes</RootNamespace>
+    <AssemblyName>Matrixes</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,19 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ShapePatterns\Circle.cs" />
-    <Compile Include="ShapePatterns\Rectangle.cs" />
-    <Compile Include="Comparers\ShapesAreaComparer.cs" />
-    <Compile Include="Comparers\ShapesPerimeterComparer.cs" />
-    <Compile Include="ShapePatterns\Square.cs" />
-    <Compile Include="ShapePatterns\IShape.cs" />
-    <Compile Include="Shapes.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShapePatterns\Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Vectors\Vectors.csproj">
+      <Project>{72c2045d-227e-4f10-a345-4785a358c8dd}</Project>
+      <Name>Vectors</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
