Детерминант матрицы. Требуется оттестировать

--- a/CourseTasks/Matrixes/Matrixes.csproj
+++ b/CourseTasks/Matrixes/Matrixes.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Matrix.cs" />
+    <Compile Include="Matrixes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
