--- a/CourseTasks/Temperature/Temperature.csproj
+++ b/CourseTasks/Temperature/Temperature.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,12 +48,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScalesClasses\Celsius.cs" />
     <Compile Include="FormTemperature.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormTemperature.Designer.cs">
       <DependentUpon>FormTemperature.cs</DependentUpon>
     </Compile>
+    <Compile Include="ScalesClasses\Farenheit.cs" />
+    <Compile Include="ScalesClasses\IScales.cs" />
+    <Compile Include="ScalesClasses\Kelvin.cs" />
     <Compile Include="Temperature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemperatureModel.cs" />
